修正swagger上傳功能 . 修正api上傳時沒有對應文章編號也能傳圖片的bug
